correct the wrapping of the first list item in the legal text on small screens

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -117,8 +117,12 @@ footer {
   list-style-type: none;
 
   li:first-of-type {
+    max-width: 300px;
     a {
       color: #06c;
+    }
+    @media only screen and (min-width: 450px) {
+      max-width: none;
     }
   }
 
